# myLogger

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/logger/: CMakeLists.txt  basicLogger.cpp  basicLogger.h  fileLogger.cpp  fileLogger.h  memoryLogger.cpp  memoryLogger.h  specificDestinationLoggerWriteInterface.h
src/logger/include/: myLoggerInterface.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
tests/: CMakeLists.txt  main.cpp  sanityTestLogger.h
